feat: url을 통해 csv 파일을 읽어 spot을 저장하는 로직 구현

--- a/spot-server/src/main/resources/application.yml
+++ b/spot-server/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
   sql:
     init:
       mode: never
+
+spot:
+  update:
+    url: https://raw.githubusercontent.com/Junction2024-Tiramisu/junction-backend/main/data-pipeline/processed-data/
